Fixed some spacing issues

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
 
 .banner-wrapper {
     position: relative;
-    height: 55vw;
+    height: 45vw;
     width: 100%;
     align-content: center;
 }
@@ -143,7 +143,7 @@ body {
     position: absolute;
     top: 12vw;
     width: 100%;
-    height: 45vw;
+    height: 33vw;
 }
 
 .banner-text-wrapper h1 {
